# click-cli-boilerplate

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: README.md  alembic.ini  makefile  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/alembic/: env.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.pkg_name}}_cli.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: config.py  loggerfactory.py  logging.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/cli/: cli.py  utils.py  widgets.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/database/: session.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/database/models/: base.py  widget.py
